--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ langchain = "*"
 langchain-community = "*"
 unstructured = "*"
 beautifulsoup4 = "*"
+chromadb = "*"
 
 [dev-packages]
 ipykernel = "*"
